assets/css/main.css
html {
    /* Theme color definitions */
    --color-light-bg: #FFF;
    --color-light-text: #111;
    --color-light-code: #111;
    --color-light-code-bg: #DDD;
    --color-dark-bg: #111;
    --color-dark-text: #FFF;
    --color-dark-code: #FFF;
    --color-dark-code-bg: #333;

    /* Default theme (light) */
    --background-color: var(--color-light-bg);
    --text-color: var(--color-light-text);
    --code-background-color: var(--color-light-code-bg);
    --darkmode: 0;

    /* Apply default */
    background-color: var(--background-color);
    color: var(--text-color);

    a {
        color: var(--text-color);
    }

    main code {
        color: var(--color-light-code);
        background-color: var(--color-light-code-bg);
    }

    main pre code {
        color: var(--color-light-code);
        background-color: var(--color-light-code-bg);
    }

    .color-scheme-icon-light {
        display: inline;
    }

    .color-scheme-icon-dark {
        display: none;
    }

    font-family: system-ui;

    code, pre {
        font-family: monospace;
        /* 1 */
        font-feature-settings: normal;
        /* 2 */
        font-variation-settings: normal;
        /* 3 */
        font-size: 1em;
        /* 4 */
    }
}

/*
Auto mode - Dark when system prefers dark.
This media query is evaluated continuously.

The html:has selectors for color scheme may not evaluate on page load; apply by default
and allow the specificity of the :has selectors for (light|dark):checked to override it.

This implicitly takes effect again when the "auto" option is checked
as the :has selectors for (light|dark):checked will be false.
*/
@media (prefers-color-scheme: dark) {
    html {
        --background-color: var(--color-dark-bg);
        --text-color: var(--color-dark-text);
        --code-background-color: var(--color-dark-code-bg);
        --darkmode: 1;

        main code {
            color: var(--color-dark-code);
            background-color: var(--color-dark-code-bg);
        }

        main pre code {
            /* For now, code highlight theme applied to pre tags
            is still light regardless of color scheme selection;
            Ensure text color not set by theme still contrasts light background. */
            color: var(--color-light-code);
        }

        .color-scheme-icon-light {
            display: none;
        }

        .color-scheme-icon-dark {
            display: inline;
        }
    }
}

/*
Manual overrides take precedence due to selector specificity
*/
html:has(#color-scheme-selector-light:checked) {
    --background-color: var(--color-light-bg);
    --text-color: var(--color-light-text);
    --code-background-color: var(--color-light-code-bg);
    --darkmode: 0;

    main code {
        color: var(--color-light-code);
        background-color: var(--color-light-code-bg);
    }

    main pre code {
        color: var(--color-light-code);
        background-color: var(--color-light-code-bg);
    }

    .color-scheme-icon-light {
        display: inline;
    }

    .color-scheme-icon-dark {
        display: none;
    }
}

html:has(#color-scheme-selector-dark:checked) {
    --background-color: var(--color-dark-bg);
    --text-color: var(--color-dark-text);
    --code-background-color: var(--color-dark-code-bg);
    --darkmode: 1;

    main code {
        color: var(--color-dark-code);
        background-color: var(--color-dark-code-bg);
    }

    main pre code {
        /* For now, code highlight theme applied to pre tags
        is still light regardless of color scheme selection;
        Ensure text color not set by theme still contrasts light background. */
        color: var(--color-light-code);
    }

    .color-scheme-icon-light {
        display: none;
    }

    .color-scheme-icon-dark {
        display: inline;
    }
}

body {
    margin: 0 auto;
    max-width: min(40rem, calc(100% - 4rem));
}

nav a, :is(h1, h2, h3, h4, h5, h6) a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

nav {
    margin: 1rem 0;
}

.nav-item {
    margin: 0 1rem 0 0;
}

.header {
    width: 100%;
    display: inline-flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}

#color-scheme-selector {
    border: none;
    display: inline-flex;
    margin: 0;
    padding: 0;
}

.color-scheme-option {
    display: flex;
    flex-direction: column; /* Stack children vertically */
    align-items: center; /* Center horizontally */
    padding: 0.1rem; /* Increase click area */
}

/* Hide the actual radio buttons for better layout and visual appeal,
and because the built-in browser styles are difficult to override. */
.color-scheme-option input[type="radio"] {
    display: none;
    /* Uncomment when displaying inputs
    to override built-in margin & align with labels */
    /*margin: 0.1rem;*/
}

.terms {
    margin: 1rem 0;
}

main {
    margin: 2rem 0 1rem 0;
}

.content pre {
    padding: 1rem;
}

.content pre, .content code{
    font-size: 0.8rem;
    overflow: auto;
}

main blockquote, main pre {
    overflow: auto;
}

footer {
    margin: 1rem 0;
}

.pages-list-item-description {
    font-weight: normal;
    font-style: italic;

    code {
        /* Improve visual differentiation of monospaced font;
        italics do not look great in most monospaced fonts anyway*/
        font-style: normal;
    }
}

